resources/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  labels:
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/instance: uptime-kuma
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: uptime-kuma
      app.kubernetes.io/instance: uptime-kuma
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uptime-kuma
        app.kubernetes.io/instance: uptime-kuma
    spec:
      automountServiceAccountToken: false
      dnsConfig:
        nameservers:
          - 192.168.1.8
          - 192.168.1.9
      dnsPolicy: None
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: uptime-kuma
          securityContext:
            {}
          image: uptime-kuma
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: storage
          livenessProbe:
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
            exec:
              command:
                - extra/healthcheck
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
            httpGet:
              path: /
              port: 3001
              scheme: HTTP
          resources:
            {}
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: uptime-kuma
